--- a/projects/dnd-system/dnd-libs/src/lib/dnd-material/dnd-mat-autocomplete-generator/dnd-mat-autocomplete-generator.component.html
+++ b/projects/dnd-system/dnd-libs/src/lib/dnd-material/dnd-mat-autocomplete-generator/dnd-mat-autocomplete-generator.component.html
@@ -1,3 +1,8 @@
-<p>
-  dnd-mat-autocomplete-generator works!
-</p>
+<mat-form-field>
+  <input type="text" placeholder="Assignee" aria-label="Assignee" matInput [formControl]="myControl" [matAutocomplete]="auto" >
+  <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn" (optionSelected)="onSelectionChanged($event)">
+    <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
+      {{option.name}}
+    </mat-option>
+  </mat-autocomplete>
+</mat-form-field>
