--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,4 +10,8 @@
 <router-outlet></router-outlet>
 
 <hr>
-<lib-dnd-mat-autocomplete-generator [optionsArray]="options"></lib-dnd-mat-autocomplete-generator>
+
+<lib-dnd-mat-autocomplete-generator 
+[placeholder]="inputName" 
+[optionsArray]="options" 
+></lib-dnd-mat-autocomplete-generator>
