--- a/projects/dnd-system/dnd-libs/src/lib/dnd-material/dnd-mat-autocomplete-generator/dnd-mat-autocomplete-generator.component.html
+++ b/projects/dnd-system/dnd-libs/src/lib/dnd-material/dnd-mat-autocomplete-generator/dnd-mat-autocomplete-generator.component.html
@@ -1,5 +1,5 @@
 <mat-form-field>
-  <input type="text" placeholder="Assignee" aria-label="Assignee" matInput [formControl]="myControl" [matAutocomplete]="auto" >
+  <input type="text" placeholder="{{ placeholder }}" matInput [formControl]="myControl" [matAutocomplete]="auto" >
   <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn" (optionSelected)="onSelectionChanged($event)">
     <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
       {{option.name}}
